--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Nexcent</title>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="logo">
@@ -28,7 +30,7 @@
                 <span class="text-primary">from 8 years</span>
             </h1>
             <p class="muted">
-                where to grow you business as a 
+                where to grow you business as a
                 photographer: site or seocial media?
             </p>
             <button class="green-button">Register</button>
@@ -37,9 +39,10 @@
             <img src="images/Illustration.png" alt="">
         </div>
     </header>
+
     <div class="our-clients">
-        <h2>our clients</h2>
-        <p class="mt-3 muted small-font">We have been working with some Fortune 500+ clients</p>
+        <h2 class="h-1-size">our clients</h2>
+        <p class="muted small-font">We have been working with some Fortune 500+ clients</p>
         <div class="clients mt-3">
             <div><img src="images/Logo.png" alt=""></div>
             <div><img src="images/Logo(1).png"></div>
@@ -50,109 +53,158 @@
             <div><img src="images/Logo(6).png"></div>
         </div>
     </div>
+
     <div class="Community">
-        <h2 class="center-text">Manage your entire community <br> in a single system</h2>
-        <p class="center-text mt-3 small-font muted">Who is Nextcent suitable for?</p>
+        <h2 class="center-text h-1-size">Manage your entire community <br> in a single system</h2>
+        <p class="center-text smaller-font muted">Who is Nextcent suitable for?</p>
         <div class="community-parent ">
             <div class="community-child">
                 <img src="images/Icon-1.png" alt="Icon">
-                <h3>Membership Organisations</h3>
-                <p class="small-font muted">Our membership management software provides full automation of membership renewals and payments</p>
+                <h2 class="mt-1">Membership Organisations</h2>
+                <p class="smaller-font muted mt-1">Our membership management software provides full automation of
+                    membership renewals and payments</p>
             </div>
             <div class="community-child">
                 <img src="images/Icon-1.png" alt="Icon">
-                <h3>National Associations    </h3>
-                <p class="small-font muted">Our membership management software provides full automation of membership renewals and payments</p>
+                <h2>National Associations </h2>
+                <p class="smaller-font muted">Our membership management software provides full automation of membership
+                    renewals and payments</p>
             </div>
             <div class="community-child">
                 <img src="images/Icon-1.png" alt="Icon">
-                <h3>Clubs And Groups</h3>
-                <p class="small-font muted">Our membership management software provides full automation of membership renewals and payments</p>
+                <h2>Clubs And Groups</h2>
+                <p class="smaller-font muted">Our membership management software provides full automation of membership
+                    renewals and payments</p>
             </div>
         </div>
     </div>
+
     <div class="The-unseen">
         <div class="left"><img src="images/rafiki.png" alt=""></div>
         <div class="right">
-            <h2>The unseen of spending three years at Pixelgrade</h2>
-            <p class="small-font muted mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. 
-                Sed accumsan quam vitae est varius fringilla. 
-                Pellentesque placerat vestibulum lorem sed porta. 
-                Nullam mattis tristique iaculis. Nullam pulvinar sit 
-                amet risus pretium auctor. Etiam quis massa pulvinar, 
+            <h2 class="h-1-size ">The unseen of spending three years at Pixelgrade</h2>
+            <p class="smaller-font muted mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet
+                justo ipsum.
+                Sed accumsan quam vitae est varius fringilla.
+                Pellentesque placerat vestibulum lorem sed porta.
+                Nullam mattis tristique iaculis. Nullam pulvinar sit
+                amet risus pretium auctor. Etiam quis massa pulvinar,
                 aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
-                <button class="big-green-button">Learn More</button>
+            <button class="big-green-button smaller-font">Learn More</button>
         </div>
     </div>
+
     <div class="Helping">
         <div class="big-div">
-            <h2>Helping a local <br>
-            <span class="text-primary">business reinvent itself</span></h2>
-            <p class="small-font">We reached here with our hard work and dedication</p>
+            <h2 class="h-1-size">Helping a local <br>
+                <span class="text-primary">business reinvent itself</span>
+            </h2>
+            <p class="smaller-font">We reached here with our hard work and dedication</p>
         </div>
         <div class="small-divs">
             <div class="child">
                 <img src="images/Icon--1.png" alt="">
-                <span>2,245,341 <br><span class="smaller-font muted">Members</span></span>    
+                <span class="big-font ">2,245,341 <br>
+                    <p class="mt-5 smaller-font muted">Members</p>
+                </span>
             </div>
             <div class="child">
                 <img src="images/Icon--2.png" alt="">
-                <span>46,328 <br><span class="smaller-font muted">Clubs</span></span>    
+                <span class="big-font">46,328 <br>
+                    <p class="mt-5 smaller-font muted">Clubs</p>
+                </span>
             </div>
             <div class="child">
                 <img src="images/Icon--3.png" alt="">
-                <span>828,867 <br><span class="smaller-font muted">Event Bookings</span></span>    
+                <span class="big-font">828,867 <br>
+                    <p class="mt-5 smaller-font muted">Event Bookings</p>
+                </span>
             </div>
             <div class="child">
                 <img src="images/Icon--4.png" alt="">
-                <span>1,926,436 <br><span class="smaller-font muted">Payments</span></span>    
+                <span class="big-font">1,926,436 <br>
+                    <p class="mt-5 smaller-font muted">Payments</p>
+                </span>
             </div>
 
         </div>
     </div>
+
     <div class="The-unseen mt-5">
         <div class="left"><img src="images/pana.png" alt=""></div>
         <div class="right">
-            <h2>How to design your site footer like we did</h2>
-            <p class="smaller-font muted mt-3">Donec a eros justo. 
-                Fusce egestas tristique ultrices. Nam tempor, 
-                augue nec tincidunt molestie, massa nunc varius 
-                arcu, at scelerisque elit erat a magna. 
-                Donec quis erat at libero ultrices mollis. 
-                In hac habitasse platea dictumst. Vivamus 
-                vehicula leo dui, at porta nisi facilisis 
-                finibus. In euismod augue vitae nisi ultricies, 
-                non aliquet urna tincidunt. Integer in nisi eget 
-                nulla commodo faucibus efficitur quis massa. 
-                Praesent felis est, finibus et nisi ac, hendrerit 
-                venenatis libero. Donec consectetur faucibus ipsum 
+            <h2 class="h-1-size">How to design your site footer like we did</h2>
+            <p class="smaller-font muted mt-3">Donec a eros justo.
+                Fusce egestas tristique ultrices. Nam tempor,
+                augue nec tincidunt molestie, massa nunc varius
+                arcu, at scelerisque elit erat a magna.
+                Donec quis erat at libero ultrices mollis.
+                In hac habitasse platea dictumst. Vivamus
+                vehicula leo dui, at porta nisi facilisis
+                finibus. In euismod augue vitae nisi ultricies,
+                non aliquet urna tincidunt. Integer in nisi eget
+                nulla commodo faucibus efficitur quis massa.
+                Praesent felis est, finibus et nisi ac, hendrerit
+                venenatis libero. Donec consectetur faucibus ipsum
                 id gravida.F</p>
-                <button class="big-green-button">Learn More</button>
+            <button class="big-green-button smaller-font">Learn More</button>
         </div>
     </div>
+
     <div class="The-unseen Tim-smith mt-5">
         <div class="left"><img src="images/image 9.png" alt=""></div>
         <div class="right">
-            <p class="smaller-font muted mt-3">Maecenas dignissim justo eget nulla rutrum molestie. 
-                Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. 
-                Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, 
-                at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. 
-                Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse 
-                eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, 
-                vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. 
+            <p class="smaller-font muted mt-3">Maecenas dignissim justo eget nulla rutrum molestie.
+                Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus.
+                Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu,
+                at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit.
+                Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse
+                eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien,
+                vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id.
                 Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
-                <p class="text-primary mt-2 small-font">Tim Smith</p>
-                <p class="muted smaller-font mt-2">British Dragon Boat Racing Association</p>
-                <div class="parent">
-                    <div><img src="images/Logo(7).png" alt=""></div>
-                    <div><img src="images/Logo(8).png" alt=""></div>
-                    <div><img src="images/Logo(9).png" alt=""></div>
-                    <div><img src="images/Logo(10).png" alt=""></div>
-                    <div><img src="images/Logo(11).png" alt=""></div>
-                    <div><img src="images/Logo(12).png" alt=""></div>
-                    <div class="small-font">Meet all customers</div>
+            <p class="text-primary mt-2 small-font">Tim Smith</p>
+            <p class="muted smaller-font mt-2">British Dragon Boat Racing Association</p>
+            <div class="parent">
+                <div><img src="images/Logo(7).png" alt=""></div>
+                <div><img src="images/Logo(8).png" alt=""></div>
+                <div><img src="images/Logo(9).png" alt=""></div>
+                <div><img src="images/Logo(10).png" alt=""></div>
+                <div><img src="images/Logo(11).png" alt=""></div>
+                <div><img src="images/Logo(12).png" alt=""></div>
+                <div class="small-font">M eet all customers</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="caring ">
+        <div class="text">
+            <h2>Caring is the new marketing</h2>
+            <p>The Nextcent blog is the best place to read about the latest membership insights, trends and more. See
+                who's joining the community, read about how our community are increasing their membership income and
+                lot's more.
+            </p>
+        </div>
+        <div class="parent">
+            <div class="child"><img src="images/image 18.png" alt="">
+                <div class="floating">
+                    <p>Creating Streamlined Safeguarding Processes with OneRen</p>
+                    <a href="#">Readmore</a>
+                </div>
+            </div>
+            <div class="child"><img src="images/image 19.png" alt="">
+                <div class="floating">
+                    <p>Creating Streamlined Safeguarding Processes with OneRen</p>
+                    <a href="#">Readmore</a>
+                </div>
+            </div>
+            <div class="child"><img src="images/image 20.png" alt="">
+                <div class="floating">
+                    <p>Creating Streamlined Safeguarding Processes with OneRen</p>
+                    <a href="#">Readmore</a>
                 </div>
             </div>
         </div>
+    </div>
 </body>
+
 </html>
