--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -21,9 +21,10 @@
             <li><a href="#">Community</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Pricing</a></li>
-            <li><a href="#">Register Now</a></li>
         </ul>
+        <button>Register Now</button>
     </nav>
+    
     <header>
         <div class="details">
             <h1>Lessons and insights <br>
